--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'Camp Candor — Meaningful choices created honestly',
+  title: 'TASOU — Meaningful choices created honestly',
   ignoreTitleTemplate: true,
 };
 ---
@@ -32,19 +32,19 @@ const metadata = {
       },
       { text: 'Learn more', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/hero-image.png', alt: 'Camp Candor Hero Image' }}
+    image={{ src: '~/assets/images/hero-image.png', alt: 'TASOU Hero Image' }}
   >
     <Fragment slot="title">
       Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white"> Camp Candor </span> + Tailwind CSS
+      <span class="text-accent dark:text-white"> TASOU </span> + Tailwind CSS
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">Camp Candor</span> is a free, customizable and production-ready template for Astro 5.0
+        <span class="font-semibold">TASOU</span> is a free, customizable and production-ready template for Astro 5.0
         + Tailwind CSS.</span
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">Camp Candor: Production-ready.</span>
+      <span class="block mb-1 sm:hidden font-bold text-blue-600">TASOU: Production-ready.</span>
       Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
       Blogs.
     </Fragment>
@@ -59,7 +59,7 @@ const metadata = {
   <Features
     id="features"
     tagline="Features"
-    title="What you get with Camp Candor"
+    title="What you get with TASOU"
     subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022, 2023 and 2024."
     items={[
       {
@@ -106,7 +106,7 @@ const metadata = {
   <Content
     isReversed
     tagline="Inside template"
-    title="Camp Candor's Blueprint: Fun Meets Functionality!"
+    title="TASOU's Blueprint: Fun Meets Functionality!"
     items={[
       {
         title: 'Built on top of Astro 5.0',
@@ -195,11 +195,11 @@ const metadata = {
       {
         title: 'Time and resource efficiency',
         description:
-          'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with Camp Candor.',
+          'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with TASOU.',
       },
       {
         title: 'Community support',
-        description: `Join the growing Camp Candor community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
+        description: `Join the growing TASOU community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
       },
     ]}
     image={{
@@ -217,12 +217,12 @@ const metadata = {
   <!-- Steps Widget ****************** -->
 
   <Steps
-    title="Get your dream website up and running in no time with Camp Candor."
+    title="Get your dream website up and running in no time with TASOU."
     items={[
       {
         title: 'Step 1: <span class="font-medium">Download</span>',
         description:
-          "Kickstart with GitHub! Either fork the Camp Candor template or simply click 'Use this template'. Your canvas awaits, ready for your digital masterpiece. In just a few clicks, you've already set the foundation.",
+          "Kickstart with GitHub! Either fork the TASOU template or simply click 'Use this template'. Your canvas awaits, ready for your digital masterpiece. In just a few clicks, you've already set the foundation.",
         icon: 'tabler:package',
       },
       {
@@ -234,7 +234,7 @@ const metadata = {
       {
         title: 'Step 3: <span class="font-medium">Customize styles</span>',
         description:
-          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by Camp Candor! Precision in design ensures a seamless user experience.',
+          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by TASOU! Precision in design ensures a seamless user experience.',
         icon: 'tabler:paint',
       },
       {
@@ -316,7 +316,7 @@ const metadata = {
 
   <BlogLatestPosts
     title="Find out more content in our Blog"
-    information={`The blog is used to display Camp Candor documentation.
+    information={`The blog is used to display TASOU documentation.
                         Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
                         Astro is a very interesting technology. Thanks.
                 `}
@@ -326,12 +326,12 @@ const metadata = {
 
   <FAQs
     title="Frequently Asked Questions"
-    subtitle="Dive into the following questions to gain insights into the powerful features that Camp Candor offers and how it can elevate your web development journey."
+    subtitle="Dive into the following questions to gain insights into the powerful features that TASOU offers and how it can elevate your web development journey."
     tagline="FAQs"
     classes={{ container: 'max-w-6xl' }}
     items={[
       {
-        title: 'Why Camp Candor?',
+        title: 'Why TASOU?',
         description:
           "Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He's a demon on wheels.",
       },
