--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,8 @@ import { ClientRouter } from 'astro:transitions';
 
 import type { MetaData as MetaDataType } from '~/types';
 
+import { SignedIn, SignedOut, UserButton, SignInButton } from "@clerk/astro/components";
+
 export interface Props {
   metadata?: MetaDataType;
 }
@@ -36,11 +38,27 @@ const { language, textDirection } = I18N;
     <SiteVerification />
     <Analytics />
 
+    
+
     <!-- Comment the line below to disable View Transitions -->
     <ClientRouter fallback="swap" />
   </head>
 
+  
+
   <body class="antialiased text-default bg-page tracking-tight">
+
+    <header>
+      <nav>
+        <SignedOut>
+          <SignInButton mode="modal" />
+        </SignedOut>
+        <SignedIn>
+          <UserButton />
+        </SignedIn>
+      </nav>
+    </header>
+    
     <slot />
 
     <BasicScripts />
