--- a/src/pages/[...blog]/index.astro
+++ b/src/pages/[...blog]/index.astro
@@ -13,7 +13,8 @@ import { findImage } from '~/utils/images';
 import type { MetaData } from '~/types';
 import RelatedPosts from '~/components/blog/RelatedPosts.astro';
 
-export const prerender = true;
+
+export const prerender = false;
 
 export const getStaticPaths = (async () => {
   return await getStaticPathsBlogPost();
