--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '~/layouts/PageLayout.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 
 const metadata = {
-  title: 'TASOU — Meaningful choices created honestly',
+  title: 'TASOU — Meaningful choices created authentically',
   ignoreTitleTemplate: true,
 };
 
