--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,4 +4,9 @@ import Layout from '../layouts/Layout.astro'
 
 <Layout title="Clerk + Astro">
   <p>Sign in to try Clerk out!</p>
+
+  <div class="bg-blue-500 text-white p-4 rounded-lg">
+  Hello, Welcome to Adventure Fork!
+</div>
+
 </Layout>
