--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,4 +9,9 @@ import Layout from '../layouts/Layout.astro'
   Hello, Welcome to Adventure Fork!
 </div>
 
+<div id="indexCanvas"/>
+
+<script src="/jsx/100.shade.js" defer></script>
+<script src="/jsx/000.sower.js" defer></script>
+
 </Layout>
