--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,13 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
+
+  <div id="indexCanvas"/>
+
+<script src="/jsx/100.shade.js" defer></script>
+<script src="/jsx/000.sower.js" defer></script>
+
+
   <!-- Hero Widget ******************* -->
 
   <Hero
