--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,9 @@ import SiteVerification from '~/components/common/SiteVerification.astro';
 import Analytics from '~/components/common/Analytics.astro';
 import BasicScripts from '~/components/common/BasicScripts.astro';
 
+import { SignedIn, SignedOut, UserButton, SignInButton } from '@clerk/astro/components'
+
+
 // Comment the line below to disable View Transitions
 import { ClientRouter } from 'astro:transitions';
 
@@ -40,7 +43,24 @@ const { language, textDirection } = I18N;
     <ClientRouter fallback="swap" />
   </head>
 
+
+
+
   <body class="antialiased text-default bg-page tracking-tight">
+
+        <header>
+      
+      <nav>
+        <SignedOut>
+          <SignInButton mode="modal" />
+        </SignedOut>
+        <SignedIn>
+          <UserButton />
+        </SignedIn>
+      </nav>
+    </header>
+
+
     <slot />
 
     <BasicScripts />
