--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -13,6 +13,11 @@ import Brands from '~/components/widgets/Brands.astro';
 
 import { YouTube } from 'astro-embed';
 
+const { userId } = Astro.locals.auth();
+if (!userId) {
+  return Astro.redirect('/sign-in');
+}
+
 const metadata = {
   title: 'Startup Landing Page',
 };
