--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -12,7 +12,7 @@ import Pagination from '~/components/blog/Pagination.astro';
 import { blogListRobots, getStaticPathsBlogList } from '~/utils/blog';
 
 
-export const prerender = true;
+export const prerender = false;
 
 const { userId } = Astro.locals.auth();
 if (!userId) {
