--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -13,10 +13,10 @@ import Brands from '~/components/widgets/Brands.astro';
 
 import { YouTube } from 'astro-embed';
 
-const { userId } = Astro.locals.auth();
-if (!userId) {
-  return Astro.redirect('/sign-in');
-}
+//const { userId } = Astro.locals.auth();
+//if (!userId) {
+//  return Astro.redirect('/sign-in');
+//}
 
 const metadata = {
   title: 'Startup Landing Page',
