--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -4,9 +4,9 @@
 import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
 
 import Layout from '~/layouts/PageLayout.astro';
-import BlogList from '~/components/blog/List.astro';
+//import BlogList from '~/components/blog/List.astro';
 import Headline from '~/components/blog/Headline.astro';
-import Pagination from '~/components/blog/Pagination.astro';
+//import Pagination from '~/components/blog/Pagination.astro';
 // import PostTags from "~/components/blog/Tags.astro";
 
 import { blogListRobots, getStaticPathsBlogList } from '~/utils/blog';
@@ -14,10 +14,10 @@ import { blogListRobots, getStaticPathsBlogList } from '~/utils/blog';
 
 export const prerender = false;
 
-const { userId } = Astro.locals.auth();
-if (!userId) {
-  return Astro.redirect('/sign-in');
-}
+//const { userId } = Astro.locals.auth();
+//if (!userId) {
+//  return Astro.redirect('/sign-in');
+//}
 
 
 export const getStaticPaths = (async ({ paginate }) => {
@@ -27,7 +27,14 @@ export const getStaticPaths = (async ({ paginate }) => {
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { page } = Astro.props as Props;
-const currentPage = page.currentPage ?? 1;
+
+var currentPage = 1;
+//var currentTile = ''
+
+if (  ( page != null  ) && ( page.currentPage != null )  ) {
+currentPage = page.currentPage ?? 1;
+}
+
 
 // const allCategories = await findCategories();
 // const allTags = await findTags();
@@ -42,6 +49,12 @@ const metadata = {
     type: 'blog',
   },
 };
+
+
+ // <BlogList posts={page.data} />
+ // <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
+  
+
 ---
 
 <Layout metadata={metadata}>
@@ -51,8 +64,7 @@ const metadata = {
     >
       The Blog
     </Headline>
-    <BlogList posts={page.data} />
-    <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
+    
     <!--
       <PostTags tags={allCategories} class="mb-2" title="Search by Categories:" isCategory />
       <PostTags tags={allTags}  title="Search by Tags:" />
