--- a/src/pages/[...blog]/[category]/[...page].astro
+++ b/src/pages/[...blog]/[category]/[...page].astro
@@ -3,18 +3,18 @@ import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
 import { blogCategoryRobots, getStaticPathsBlogCategory } from '~/utils/blog';
 
 import Layout from '~/layouts/PageLayout.astro';
-import BlogList from '~/components/blog/List.astro';
+//import BlogList from '~/components/blog/List.astro';
 import Headline from '~/components/blog/Headline.astro';
-import Pagination from '~/components/blog/Pagination.astro';
+//import Pagination from '~/components/blog/Pagination.astro';
 
 
 
 export const prerender = false;
 
-const { userId } = Astro.locals.auth();
-if (!userId) {
-  return Astro.redirect('/sign-in');
-}
+//const { userId } = Astro.locals.auth();
+//if (!userId) {
+//  return Astro.redirect('/sign-in');
+//}
 
 export const getStaticPaths = (async ({ paginate }) => {
   return await getStaticPathsBlogCategory({ paginate });
@@ -24,21 +24,36 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths> & { category: Record
 
 const { page, category } = Astro.props as Props;
 
-const currentPage = page.currentPage ?? 1;
+
+var currentPage = 1;
+var currentTile = ''
+
+if (  ( page != null  ) && ( page.currentPage != null )  ) {
+currentPage = page.currentPage ?? 1;
+}
+
+if (  ( category != null  ) && ( category.title != null )  ) {
+currentTile = category.title ?? "";
+}
+
 
 const metadata = {
-  title: `Category '${category.title}' ${currentPage > 1 ? ` — Page ${currentPage}` : ''}`,
+  title: `Category '${currentTile}' ${currentPage > 1 ? ` — Page ${currentPage}` : ''}`,
   robots: {
     index: blogCategoryRobots?.index,
     follow: blogCategoryRobots?.follow,
   },
 };
+
+
+//<BlogList posts={page.data} />
+//<Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
+
 ---
 
 <Layout metadata={metadata}>
   <section class="px-4 md:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
-    <Headline>{category.title}</Headline>
-    <BlogList posts={page.data} />
-    <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
+    <Headline>{currentTile}</Headline>
+    
   </section>
 </Layout>
