--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -62,7 +62,7 @@ const metadata = {
     <Headline
       subtitle="A statically generated blog example with news, tutorials, resources and other interesting content related to AstroWind"
     >
-      The Blog
+      AUTO PAGE
     </Headline>
     
     <!--
