--- a/src/pages/[...blog]/index.astro
+++ b/src/pages/[...blog]/index.astro
@@ -53,6 +53,9 @@ const metadata = merge(
 ---
 
 <Layout metadata={metadata}>
+
+  BLOG PLACE
+
   <SinglePost post={{ ...post, image: image }} url={url}>
     {post.Content ? <post.Content /> : <Fragment set:html={post.content || ''} />}
   </SinglePost>
