--- a/src/pages/[...blog]/index.astro
+++ b/src/pages/[...blog]/index.astro
@@ -54,7 +54,7 @@ const metadata = merge(
 
 <Layout metadata={metadata}>
 
-  BLOG PLACE
+MYTHOS.TATTOO
 
   <SinglePost post={{ ...post, image: image }} url={url}>
     {post.Content ? <post.Content /> : <Fragment set:html={post.content || ''} />}
