--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -12,7 +12,7 @@ import { SignIn } from '@clerk/astro/components'
     <title>Astro</title>
   </head>
   <body>
-    <SignIn client:load />
+    <SignIn/>
   </body>
 </html>
 
