--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -7,7 +7,7 @@
     <div class="toc-overlay"></div>
     <div class="toc-content">
       <div class="toc-logo">Dungeons & Dragons | Stranger Things</div>
-      <h2>WELCOME to the<br />HELLFIRE CLUB</h2>
+      <h2>WELCOME to the<br />MYTHOS CLUB</h2>
       <div class="toc-button">AVAILABLE NOW</div>
     </div>
   </a>
